fix image grid on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -11,55 +11,40 @@ nav {
 }
 
 img:hover {
-  transform: scale(1.5);
+  transform: scale(1.3);
   transition: 0.5s;
 }
 
-.gallery-container {
+.gallery {
   padding: 50px 10px 50px 10px;
+  max-width: 1100px;
+  margin: 0 auto;
+  background: #f2f2f2;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: 250px;
+  grid-auto-flow: dense;
 }
 
-img {
-  transition: 0.3s;
-  max-width: 100%;
-  height: auto;
-  vertical-align: middle;
-  display: inline-block;
+.tall {
+  grid-row: span 2;
 }
 
-.grid-wrapper > div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.wide {
+  grid-column: span 2;
 }
 
-.grid-wrapper > div > img {
+.big {
+  grid-row: span 2;
+  grid-column: span 2;
+}
+
+.gallery div img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 5px;
-}
-
-.grid-wrapper {
-  padding: 50px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-auto-rows: 200px;
-  grid-auto-flow: dense;
-  gap: 50px;
-}
-
-.grid-wrapper .wide {
-  grid-column: span 2;
-}
-
-.grid-wrapper .tall {
-  grid-row: span 2;
-}
-
-.grid-wrapper .big {
-  grid-column: span 2;
-  grid-row: span 2;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar {
